objects/VPPSR_Search_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Search_By_Serial_Num_Resp_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Search By Serial Num Resp Type</label>
        <referenceTo>VPPSR_Search_By_Serial_Num_Resp_Type__c</referenceTo>
        <relationshipName>Search_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>access_Search_Result_Expiry_Time__c</fullName>
        <label>access Search Result Expiry Time</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>result_Count__c</fullName>
        <label>result Count</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>search_Executed_Date_Time__c</fullName>
        <label>search Executed Date Time</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>search_Number__c</fullName>
        <label>search Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>search_Type__c</fullName>
        <label>search Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>VPPSR Search Summary</label>
    <nameField>
        <displayFormat>VSS-{000000000}</displayFormat>
        <label>Search Summary  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VPPSR Search Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>